# cmake_template

./: CMakeLists.txt  CMakeLists_original.txt
Drivers/__STM32F4xx_HAL_Driver/Src/: Makefile  cmake_install.cmake
ProjectToBuild/: CMakeLists.txt
ProjectToBuild/src/: main.c
STCubeMX_SettingClock/: .mxproject  Makefile  SettingClock.ioc
STCubeMX_SettingClock/Inc/: stm32f4xx_it.h
STCubeMX_SettingClock/Src/: gpio.c  main.c
inc/: _stm32f4xx_it.h  main.h
src/: SD_management.c  _main.c  _stm32f4xx_hal_msp.c  _stm32f4xx_it.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
